# carrot-ml

./: .gitignore  .gitmodules  carrot-wasm-postprocessing.js  deno.jsonc  evaluate-cc.py  inference-ts.py  inference.py  requirements.frozen.txt  requirements.txt  run_tests.sh  run_tests_deno.sh  training-boundaries-svg.py  training-boundaries.py  training-cc-cells.py  training-cells.py  training-graphcut.py  training-maskrcnn.py  training-treerings.py  update-boundaries-svg.py  update-cc.py  update-cells.py  update.py
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  carrot-wasm-postprocessing.d.ts  carrot-wasm-postprocessing.ts  dep.ts  python-interface.cpp  wasm-interface.cpp
cpp/src/: geometry.cpp  geometry.hpp  image-utils.cpp  image-utils.hpp  postprocessing.cpp  postprocessing.hpp  postprocessing_cells.cpp  postprocessing_cells.hpp  pybind-utils.cpp  pybind-utils.hpp  utils.hpp  wasm-utils.cpp  wasm-utils.hpp
src/: cc_celldetection.py  cc_postprocessing.py  cellsmodel.py  evaluation.py  graphcutmodel.py  graphcuttraining.py  maskrcnn_celldetection.py  treeringmodel.py  treerings_clustering_legacy.py  util.py
tests/: test_cells.py  test_cpp_postprocessing.py  test_eval.py  wasm-postprocessing.test.ts
